# milvus

./: go.mod  go.sum
core/: build.sh
core/cmake/: ThirdPartyPackages.cmake
core/src/: CMakeLists.txt
core/src/db/: DBImpl.cpp
core/src/index/cmake/: ThirdPartyPackagesCore.cmake
core/src/utils/: ValidationUtil.h
internal/core/src/common/: CMakeLists.txt  Chunk.h  ChunkWriter.cpp  ChunkWriter.h  Consts.h  FieldData.h  IteratorManager.cpp  IteratorManager.h  QueryInfo.h  SearchIteratorManager.cpp  SearchIteratorManager.h  init_c.cpp  init_c.h
internal/core/src/index/: Utils.cpp
internal/core/src/mmap/: ChunkedColumn.h
internal/core/src/query/: CachedSearchIterator.cpp  (+7 more)
internal/core/unittest/: CMakeLists.txt  test_cached_search_iterator.cpp
internal/datacoord/: index_builder.go  task_index.go  util.go
internal/flushcommon/syncmgr/: lob.go  pack_writer.go
internal/flushcommon/writebuffer/: write_buffer.go
internal/proto/: plan.proto
internal/proxy/: meta_cache.go  proxy.go  search_util.go  task.go  task_search.go  util.go
internal/querynodev2/: server.go
internal/querynodev2/delegator/: delegator_data.go
internal/storage/: binlog_reader.go  data_codec.go  event_data.go  insert_data.go  lob.go  payload.go  payload_writer.go  serde_events.go  sort.go  utils.go
internal/util/exprutil/: expr_checker_test.go
pkg/: go.mod  go.sum
pkg/common/: common.go
pkg/config/: manager.go
pkg/util/paramtable/: component_param.go
pkg/util/typeutil/: schema.go
scripts/: core_build.sh
tests/python_client/testcases/: test_collection.py
(+10 files in other folders)
